@@ -78,7 +78,7 @@ Once you have installed the package, you may want to test it:
     .........................................................................
     ................................................................
     ----------------------------------------------------------------------
-    Ran 587 tests in 0.162s
+    Ran 589 tests in 0.163s
 
     OK
 
