@@ -1,7 +1,7 @@
 Reference
 =========
 
-bitarray version: 3.5.2 -- `change log <https://github.com/ilanschnell/bitarray/blob/master/doc/changelog.rst>`__
+bitarray version: 3.6.0 -- `change log <https://github.com/ilanschnell/bitarray/blob/master/doc/changelog.rst>`__
 
 In the following, ``item`` and ``value`` are usually a single bit -
 an integer 0 or 1.
@@ -502,11 +502,25 @@ This sub-module was added in version 1.2.
    New in version 1.8
 
 
+``random_k(n, /, k, endian=None)`` -> bitarray
+   Return (pseudo-) random bitarray of length ``n`` with ``k`` elements
+   set to one.  Mathematically equivalent to setting (in a bitarray of
+   length ``n``) all bits at indices ``random.sample(range(n), k)`` to one.
+   The random bitarrays are reproducible when giving Python's ``random.seed()``
+   with a specific seed value.
+
+   This function requires Python 3.9 or higher, as it depends on the standard
+   library function ``random.randbytes()``.  Raises ``NotImplementedError``
+   when Python version is too low.
+
+   New in version 3.6
+
+
 ``random_p(n, /, p=0.5, endian=None)`` -> bitarray
-   Return (pseudo-) random bitarray of length ``n``.  Each bit has probability ``p``
-   of being one (independent of any other bits).  Mathematically equivalent
-   to ``bitarray((random() < p for _ in range(n)), endian)``, but much faster
-   for large ``n``.  The random bitarrays are reproducible when giving
+   Return (pseudo-) random bitarray of length ``n``, where each bit has
+   probability ``p`` of being one (independent of any other bits).  Mathematically
+   equivalent to ``bitarray((random() < p for _ in range(n)), endian)``, but much
+   faster for large ``n``.  The random bitarrays are reproducible when giving
    Python's ``random.seed()`` with a specific seed value.
 
    This function requires Python 3.12 or higher, as it depends on the standard
@@ -561,6 +575,13 @@ This sub-module was added in version 1.2.
    iteration is stopped as soon as one mismatch is found.
 
 
+``sum_indices(a, /)`` -> int
+   Return sum of indices of all active bits in bitarray ``a``.
+   This is equivalent to ``sum(i for i, v in enumerate(a) if v)``.
+
+   New in version 3.6
+
+
 ``urandom(n, /, endian=None)`` -> bitarray
    Return random bitarray of length ``n`` (uses ``os.urandom()``).
 
@@ -590,7 +611,7 @@ This sub-module was added in version 1.2.
 ``xor_indices(a, /)`` -> int
    Return xor reduced indices of all active bits in bitarray ``a``.
    This is essentially equivalent to
-   ``reduce(operator.xor, [i for i, v in enumerate(a) if v])``.
+   ``reduce(operator.xor, (i for i, v in enumerate(a) if v))``.
 
    New in version 3.2
 
